--- a/css/estilos.css
+++ b/css/estilos.css
@@ -576,7 +576,7 @@ html {
 }
 
 .post-img-1 {
-  background: url(/img/taller3.jpeg);
+  background: url(../img/taller3.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
@@ -584,7 +584,7 @@ html {
 }
 
 .post-img-2 {
-  background: url(/img/kanikat.jpeg);
+  background: url(../img/kanikat.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
@@ -593,7 +593,7 @@ html {
 }
 
 .post-img-3 {
-  background: url(/img/tallerRS.jpeg);
+  background: url(../img/tallerRS.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
