Incluyendo pagina de producto y de contacto

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,5 @@
 @use './partials/noticias';
 @use './partials/footer';
 @use './partials/imgVetProductos';
+@use './partials/producto';
+@use './partials/contacto';
