--- a/css/estilos.css
+++ b/css/estilos.css
@@ -751,4 +751,101 @@ html {
   margin-top: 10px;
 }
 
+.banner__image .banner__producto {
+  height: 200px;
+}
+
+#prodetails {
+  display: flex;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  margin-left: 10px;
+}
+#prodetails .single-pro-image {
+  width: 40%;
+  margin-right: 50px;
+}
+#prodetails .single-pro-image img {
+  box-shadow: 1px 1px 30px -5px #7c8081;
+  border-radius: 10px;
+}
+#prodetails .single-pro-details {
+  width: 50%;
+  padding: 0px;
+}
+#prodetails .single-pro-details h4 {
+  padding: 20px 0 10px 0;
+  color: #195D6E;
+}
+#prodetails .single-pro-details h2 {
+  font-size: 25px;
+}
+#prodetails .single-pro-details h3 {
+  font-size: 20px;
+}
+#prodetails .single-pro-details .boton__general {
+  padding: 10px 40px;
+  margin-top: 5px;
+  font-size: 12px;
+  cursor: pointer;
+  border: none;
+  color: white;
+  background: #195D6E;
+  box-shadow: 1px 1px 30px -5px #17647b;
+  border-radius: 10px;
+  transition: box-shadow 600ms;
+}
+#prodetails .single-pro-details .boton__general:hover {
+  box-shadow: 1px 1px 30px 0px #2d92b1;
+}
+#prodetails .single-pro-details span {
+  padding: 10px 20px 10px 0;
+  display: flex;
+  text-align: justify;
+  color: #5b5e5e;
+}
+
+.small-img-group {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.small-img-group .small-img-col {
+  flex-basis: 24%;
+  cursor: pointer;
+  box-shadow: 1px 1px 30px -5px #7c8081;
+}
+
+.form-register {
+  width: 400px;
+  background-image: linear-gradient(90deg, #043140, #195D6E);
+  padding: 30px;
+  margin: auto;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  color: white;
+}
+.form-register .formulario {
+  width: 100%;
+}
+
+.controls {
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  border: 1px solid #195D6E;
+}
+
+.boton__enviar {
+  width: 100%;
+  border: none;
+  padding: 12px;
+  color: #195D6E;
+  background: white;
+  margin: 16px 0;
+  font-size: 16px;
+}
+
 /*# sourceMappingURL=estilos.css.map */
