--- a/css/estilos.css
+++ b/css/estilos.css
@@ -670,7 +670,7 @@ html {
 }
 
 .iconos {
-  margin-top: 5%;
+  margin-top: 2%;
   margin-left: 10%;
 }
 .iconos img {
@@ -679,7 +679,7 @@ html {
 
 .iconos_uno {
   justify-items: center;
-  margin-top: 5%;
+  margin-top: 2%;
   margin-left: 5%;
 }
 .iconos_uno img {
@@ -825,6 +825,7 @@ html {
   margin-bottom: 20px;
   border-radius: 20px;
   color: white;
+  box-shadow: 1px 1px 30px -5px #17647b;
 }
 .form-register .formulario {
   width: 100%;
