--- a/sass/partials/_contacto.scss
+++ b/sass/partials/_contacto.scss
@@ -8,8 +8,10 @@ $color-degrado-principal:linear-gradient(90deg, #043140, #195D6E );
     margin-bottom: 20px;
     border-radius: 20px;
     color: white;
+    box-shadow: 1px 1px 30px -5px #17647b;
     .formulario{
         width: 100%;
+
     }
     
 }
