--- a/css/estilos.css
+++ b/css/estilos.css
@@ -580,7 +580,7 @@ html {
 }
 
 .post-img-1 {
-  background: url(/img/taller1.jpeg);
+  background: url(./img/taller1.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
@@ -588,7 +588,7 @@ html {
 }
 
 .post-img-2 {
-  background: url(/img/kanikat.jpeg);
+  background: url(./img/kanikat.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
@@ -597,7 +597,7 @@ html {
 }
 
 .post-img-3 {
-  background: url(/img/tallerRS.jpeg);
+  background: url(./img/tallerRS.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
