--- a/css/estilos.css
+++ b/css/estilos.css
@@ -562,6 +562,7 @@ html {
   box-shadow: 1px 1px 30px 0px #2d92b1;
 }
 
+/*NOTICIAS*/
 .post__list {
   display: flex;
   min-height: 100vh;
@@ -580,7 +581,7 @@ html {
 }
 
 .post-img-1 {
-  background: url(./img/taller1.jpeg);
+  background: url(/img/taller1.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
