--- a/css/estilos.css
+++ b/css/estilos.css
@@ -581,7 +581,7 @@ html {
 }
 
 .post-img-1 {
-  background: url(/img/taller1.jpeg);
+  background: url(../img/taller1.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
