--- a/css/estilos.css
+++ b/css/estilos.css
@@ -589,7 +589,7 @@ html {
 }
 
 .post-img-2 {
-  background: url(./img/kanikat.jpeg);
+  background: url(../img/kanikat.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
