--- a/sass/partials/_noticias.scss
+++ b/sass/partials/_noticias.scss
@@ -15,14 +15,14 @@
     flex-wrap: wrap;
 }
 .post-img-1{
-    background: url(./img/taller1.jpeg);
+    background: url(../img/taller2.jpeg);
     width: 100%;
     height: 200px;
     background-size: cover;
     transition: .2s;
 }
 .post-img-2{
-    background: url(./img/kanikat.jpeg);
+    background: url(../img/kanikat.jpeg);
     width: 100%;
     height: 200px;
     background-size: cover;
