--- a/sass/partials/_noticias.scss
+++ b/sass/partials/_noticias.scss
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
 }
 .post-img-1{
-    background: url(../img/taller1);
+    background: url(../img/taller3.jpeg);
     width: 100%;
     height: 200px;
     background-size: cover;
