--- a/css/estilos.css
+++ b/css/estilos.css
@@ -598,7 +598,7 @@ html {
 }
 
 .post-img-3 {
-  background: url(./img/tallerRS.jpeg);
+  background: url(../img/tallerRS.jpeg);
   width: 100%;
   height: 200px;
   background-size: cover;
