--- a/sass/partials/_noticias.scss
+++ b/sass/partials/_noticias.scss
@@ -30,7 +30,7 @@
     transition: .2s;
 }
 .post-img-3{
-    background: url(./img/tallerRS.jpeg);
+    background: url(../img/tallerRS.jpeg);
     width: 100%;
     height: 200px;
     background-size: cover;
