--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,14 +8,14 @@
     align-items: center;
     text-align: center;
     color: #17647b;
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-top: 40px;
     position: relative;
   }
   .texto__deslizante {
     margin: 0;
     padding: 0;
-    font-size: 14px;
+    font-size: 0.5rem;
   }
   .iconos {
     text-align: center;
@@ -638,12 +638,14 @@ html {
   text-align: center;
 }
 .post__body span {
-  display: inline-block;
   color: #999;
   margin-bottom: 10px;
+  text-align: justify;
 }
 .post__body h2 {
   margin-bottom: 15px;
+  font-size: 20px;
+  color: #2c849f;
 }
 .post__body .post-link {
   display: block;
