--- a/sass/partials/_noticias.scss
+++ b/sass/partials/_noticias.scss
@@ -66,12 +66,14 @@
     padding: 15px;
     text-align: center;
     span{
-        display: inline-block;
         color: #999;
         margin-bottom: 10px;
+        text-align: justify;
     }
     h2{
         margin-bottom: 15px;
+        font-size: 20px;
+        color: #2c849f;
     }
     .post-link{
         display: block;
