--- a/css/estilos.css
+++ b/css/estilos.css
@@ -820,7 +820,7 @@ html {
 }
 
 .form-register {
-  width: 400px;
+  width: 800px;
   background-image: linear-gradient(90deg, #043140, #195D6E);
   padding: 30px;
   margin: auto;
@@ -836,6 +836,7 @@ html {
 
 .controls {
   width: 100%;
+  height: 40px;
   padding: 10px;
   border-radius: 4px;
   margin-bottom: 16px;
