--- a/sass/partials/_contadorRedglobal.scss
+++ b/sass/partials/_contadorRedglobal.scss
@@ -1,4 +1,7 @@
 //CONTADOR DE RED GLOBAL TAICHI
+.red__mundo{
+    background: rgb(217, 235, 235);
+}
 .red__global{
     justify-content: center;
     align-items: center;
