--- a/css/estilos.css
+++ b/css/estilos.css
@@ -136,6 +136,9 @@ html {
   font-size: large;
   transition: all 300ms ease;
 }
+.navbar .dropdown-item {
+  color: #555;
+}
 .navbar .dropdown-item:hover {
   background-color: #3f7e8d;
   color: white;
@@ -207,15 +210,15 @@ html {
   z-index: 2;
   transition: 0.3s ease all;
 }
-.boton.uno:hover {
+.boton .uno:hover {
   background: #336571;
   color: white;
 }
-.boton.uno:hover::after {
+.boton .uno:hover::after {
   transform: scale(225);
   background: #3f7e8d;
 }
-.boton.uno::after {
+.boton .uno::after {
   content: "";
   width: 1px;
   height: 1px;
@@ -228,15 +231,15 @@ html {
   border-radius: 100px;
   transform-origin: center;
 }
-.boton.dos:hover {
+.boton .dos:hover {
   background: #20744C;
   color: white;
 }
-.boton.dos:hover::after {
+.boton .dos:hover::after {
   transform: scale(225);
   background: #20744C;
 }
-.boton.dos::after {
+.boton .dos::after {
   content: "";
   width: 1px;
   height: 1px;
@@ -249,15 +252,15 @@ html {
   border-radius: 100px;
   transform-origin: center;
 }
-.boton.tres:hover {
+.boton .tres:hover {
   background: #17647b;
   color: white;
 }
-.boton.tres:hover::after {
+.boton .tres:hover::after {
   transform: scale(225);
   background: #1D7E9C;
 }
-.boton.tres::after {
+.boton .tres::after {
   content: "";
   width: 1px;
   height: 1px;
@@ -270,15 +273,15 @@ html {
   border-radius: 100px;
   transform-origin: center;
 }
-.boton.cuatro:hover {
+.boton .cuatro:hover {
   background: #5f1771;
   color: white;
 }
-.boton.cuatro:hover::after {
+.boton .cuatro:hover::after {
   transform: scale(225);
   background: #8A23A4;
 }
-.boton.cuatro::after {
+.boton .cuatro::after {
   content: "";
   width: 1px;
   height: 1px;
@@ -291,15 +294,15 @@ html {
   border-radius: 100px;
   transform-origin: center;
 }
-.boton.cinco:hover {
+.boton .cinco:hover {
   background: #8c822e;
   color: white;
 }
-.boton.cinco:hover::after {
+.boton .cinco:hover::after {
   transform: scale(225);
   background: #c7b82c;
 }
-.boton.cinco::after {
+.boton .cinco::after {
   content: "";
   width: 1px;
   height: 1px;
@@ -857,6 +860,65 @@ html {
   background: white;
   margin: 16px 0;
   font-size: 16px;
+}
+
+.boton__general {
+  display: flex;
+  justify-content: center;
+  padding: 10px 40px;
+  margin-top: 10px;
+  font-size: 12px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  border: none;
+  color: white;
+  background: #195D6E;
+  box-shadow: 1px 1px 30px -5px #17647b;
+  border-radius: 10px;
+  transition: box-shadow 600ms;
+}
+.boton__general:hover {
+  box-shadow: 1px 1px 30px 0px #2d92b1;
+}
+
+.boton__cotiza {
+  display: flex;
+  justify-content: center;
+}
+
+.servicios {
+  color: gray;
+  margin: auto;
+  padding: 30px;
+}
+
+.p {
+  color: gray;
+}
+
+.serv__equipos {
+  text-decoration: none;
+  color: gray;
+  margin-top: 10px;
+  padding: 30px;
+  margin-bottom: 10px;
+}
+.serv__equipos h5 {
+  color: #17647b;
+}
+.serv__equipos li {
+  text-decoration: none;
+  list-style: none;
+}
+
+.icono_h {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.texto_serv {
+  color: gray;
 }
 
 /*# sourceMappingURL=estilos.css.map */
