--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -3,24 +3,10 @@
     display: flex;
     background-image:linear-gradient(90deg, #043140, #195D6E ) ;
     width: 100%;
-    height: 250px;
+    height: 100%;
     color: white;
+    margin-top: 0px;
 }
-.iconos{
-    margin-top: 2%;
-    margin-left: 10%;
-    img{
-        width: 10%;
-    }
-}
-.iconos_uno{
-    justify-items: center;
-    margin-top: 2%;
-    margin-left: 5%;
-    img{
-        width: 10%;
-    }
-}
-.footer__logo{
-    margin-top: 5%;
+.caja__datos{
+    color: rgb(150, 178, 198);
 }
