--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -1,7 +1,11 @@
 /*RESOLUCION PARA MOVIL*/
 @media(max-width: 992px){
-    .footer__logo{
-        display: none;
+    .caja__datos{
+        padding-top: 0px;
+        text-align: center;
+        p{
+            color: rgb(150, 178, 198);
+        }
     }
     .texto__equipos{
         justify-content: center;
@@ -17,31 +21,6 @@
         padding: 0;
         font-size: 0.5rem;
     }
-    .iconos {
-        text-align: center;
-        margin: 0;
-        padding: 5px;
-        img{
-        width: 40px;
-        height: 40px;
-        }
-    }
-    .iconos_uno{
-        margin: 0px;
-        padding: 0px;
-        text-align: center;
-        font-size: 14px;
-        p{
-        margin: 0px;
-        padding: 0px;
-        text-align: center;
-        font-size: 12px;
-        }
-        img{
-            width: 32px;
-            height: 32px;
-            }
-        }
     .noticias{
         border-radius: 0;
         width: 100%;
