--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,12 +1,19 @@
 //FOOTER INFO
 .footer_info{
-    display: flex;
     background-image:linear-gradient(90deg, #043140, #195D6E ) ;
     width: 100%;
     height: 100%;
     color: white;
-    margin-top: 0px;
+    margin: 0px;
+    padding: 0px;
 }
 .caja__datos{
-    color: rgb(150, 178, 198);
+    color: rgb(164, 206, 235);
+}
+.frase{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: gray;
+    font-size: 25px;
 }
