--- a/sass/partials/_bannerDesplazamiento.scss
+++ b/sass/partials/_bannerDesplazamiento.scss
@@ -1,6 +1,6 @@
 /*BANNER TEXTO CON DESPLAZAMIENTO*/
 .texto__deslizante{
-    display:flex;
+    display: flex;
     width: 100%;
     height: 45px;
     font-size: 2rem;
@@ -16,6 +16,12 @@
     color: #195D6E;
     margin: 30px;
     text-shadow: 2px 1px 0 gray;
+}
+.frase{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 20px;
 }
 /*TRANSISIONES DE PALABRAS*/
 @keyframes cambiar {
