--- a/sass/partials/_nosotros.scss
+++ b/sass/partials/_nosotros.scss
@@ -1,10 +1,11 @@
 //NOSOTROS
 .nosotros {
     p{
-    padding: 5%;
+    height: 100px;
+    padding: 2%;
     text-align: justify;
     font-size: 20px;
-    background: rgb(248, 252, 252);
+    background: white;
     color: #195D6E;
 }
 }
