--- a/sass/partials/_noticias.scss
+++ b/sass/partials/_noticias.scss
@@ -15,14 +15,14 @@
     flex-wrap: wrap;
 }
 .post-img-1{
-    background: url(../img/taller3.jpeg);
+    background: url(/img/noti1.png);
     width: 100%;
     height: 200px;
     background-size: cover;
     transition: .2s;
 }
 .post-img-2{
-    background: url(../img/kanikat.jpeg);
+    background: url(/img/noti2.png);
     width: 100%;
     height: 200px;
     background-size: cover;
@@ -30,7 +30,7 @@
     transition: .2s;
 }
 .post-img-3{
-    background: url(../img/tallerRS.jpeg);
+    background: url(/img/noti3.png);
     width: 100%;
     height: 200px;
     background-size: cover;
