Final subido al dominio

--- a/sass/partials/_mobile.scss
+++ b/sass/partials/_mobile.scss
@@ -39,8 +39,9 @@
         }
     }
     .nosotros{
+        margin-bottom: 140px;
         p{
-        font-size: 5px;
+        font-size: 2px;
         }
     }
 
