--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,8 +38,11 @@
     width: auto;
     left: 10px;
   }
+  .nosotros {
+    margin-bottom: 140px;
+  }
   .nosotros p {
-    font-size: 5px;
+    font-size: 2px;
   }
 }
 * {
@@ -382,7 +385,7 @@ html {
 
 .nosotros p {
   height: 100px;
-  padding: 2%;
+  padding: 5%;
   text-align: justify;
   font-size: 20px;
   background: white;
